--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -4,7 +4,7 @@ author: "Ryan Romard"
 editor: visual
 format: 
   dashboard:
-    scrolling: true
+    scrolling: false
     theme: 
       - sandstone
       - lfs_dash_style.css
@@ -74,7 +74,7 @@ theme_rr_dash <-
 lfs_freq <- qread(here('_targets', 'objects', 'lfs_freq'))
 
 # Summarize totals and averages by year
-chart_df <- lfs_freq |>
+base_df <- lfs_freq |>
   filter(
     !is.na(varlevel),
     union_bin != "Not applicable",
@@ -185,17 +185,34 @@ chart_df <- lfs_freq |>
       varlevel == "Trades, transport and equipment operators and related occupations, except management" ~ "Trades/Transport/Equipment operators",
       .default = as.character(varlevel)
     )
-  ) 
+  ) |> relocate(var_orig, .before = variable)
 
-# Get original variable list
-orig_vars <- chart_df |> distinct(variable, var_orig, varlevel)
+emp_vars <- c("nse", "ftptmain", "permtemp", "mjh")
+
+var_key <- base_df |> distinct(var_orig, variable)
 
 # Summarize the data from monthly to yearly
-chart_df <- chart_df |> 
+## Union density
+dens_df <- base_df |> 
   group_by(survyear, variable, varlevel, cowmain_rc, union_bin) |>
   summarise(p_v = mean(p_v, na.rm = TRUE),
             n_v = mean(n_v, na.rm = TRUE)) |>
   ungroup()
+
+# Summarize the data from monthly to yearly
+## Population proportions and counts
+pop_df <- base_df |> 
+  filter(union_bin == "Union member") |> 
+  group_by(survyear, var_orig, varlevel, cowmain_rc) |>
+  summarise(n_v = mean(n_v, na.rm = TRUE)) |>
+  ungroup() |> 
+  group_by(survyear, var_orig, cowmain_rc) |> 
+  mutate(
+      p_memb = n_v / sum(n_v),
+      p_memb_bd = 1 - p_memb,
+      cowmain_rc = as_factor(as.character(cowmain_rc))) |> 
+  left_join(var_key) |> 
+  relocate(variable, .after = var_orig)
 
 # Dataframe full of default factor levels
 factor_levels <- 
@@ -324,7 +341,7 @@ factor_levels <-
 )
 
 # Pull main variables for selector list
-dash_vars <- chart_df |> distinct(variable) |> pull() |> as.character()
+dash_vars <- dens_df |> distinct(variable) |> pull() |> as.character()
 dash_vars_order <- c("Province", "CMA", "Age (12 groups)", "Education", "Gender", "Family type", "Youngest child", "Immigration", "Occupation","Industry","Employment status", "Job tenure")
 dash_vars <- dash_vars[order(match(dash_vars, dash_vars_order))]
 ```
@@ -348,7 +365,6 @@ selectInput("gg_layout", label = 'Layout', choices = c("Vertical", "Horizontal")
 #| fill: false
 #| flow: true
 #| dev: "svg"
-#| warning: false
 plotOutput('plot_dens', height = "100%", width = "100%")
 ```
 
@@ -368,23 +384,26 @@ selectInput("gg_measure", label = 'Measure', choices = c("Proportion", "Count"))
 #| fill: false
 #| flow: true
 #| dev: "svg"
-#| warning: false
 plotOutput('plot_pop', height = "100%", width = "100%")
 ```
 
-# Data
+# Table
 
 ##  {.toolbar}
 
 ```{r}
 selectInput("variable", label = "Select variable", choices = dash_vars)
-selectInput("tab_measure", label = "Select variable", choices = c("Density", "Proportion", "count"))
+selectInput("tab_measure", label = "Select variable", choices = c("Density", "Proportion", "Count"))
 ```
 
 ## Content
 
 ```{r}
-tableOutput('table')
+#| fill: false
+#| flow: false
+#| dev: "svg"
+#| class: tab
+uiOutput('table', inline = TRUE, fill = TRUE)
 ```
 
 ```{r}
@@ -400,7 +419,7 @@ flevels <- reactive({
 # Create data set, reactive
 dataset <- reactive({
   req(input$variable)
-  df <- chart_df[chart_df$variable == input$variable, ] |> 
+  df <- dens_df[dens_df$variable == input$variable, ] |> 
     mutate(varlevel = factor(varlevel, levels = flevels()))
 })
 
@@ -558,12 +577,10 @@ output$plot_dens <- renderPlot({
 ##### Member demographics
 # Bar charts
 ## Subset reactive dataset to union members only
-## Calculate the demographic propoertions of union members + bar chart backdrop
+## Calculate the demographic proportions of union members + bar chart backdrop
 dataset_pop <- reactive({
-  df <- chart_df[chart_df$variable == input$variable, ] |>
+  df <- pop_df[pop_df$variable == input$variable, ] |>
     mutate(varlevel = factor(varlevel, levels = flevels())) |>
-    filter(union_bin == "Union member") |>
-    select(-union_bin) |> 
     group_by(survyear, cowmain_rc) |>
     mutate(
       p_memb = n_v / sum(n_v),
@@ -637,7 +654,7 @@ union_bars_gg <- function(.data, pal) {
         fill = .data$fillvar
       )
     ) +
-      geom_col() +
+      geom_col(position = "fill") +
       geom_hline(yintercept = 0, color = "#d8d8d8") +
       geom_bar_text(
         data = filter(.data, fillvar == "yes"),
@@ -648,7 +665,7 @@ union_bars_gg <- function(.data, pal) {
         size = 15,
         min.size = 10
       ) +
-      scale_y_continuous(labels = percent_format(accuracy = 1L)) +
+      scale_y_continuous(labels = percent_format(accuracy = 1L), limits = c(0,1)) +
       scale_fill_manual(values = pal, na.value = "#DADDEF") +
       theme_rr_dash() +
       theme(panel.grid = element_blank()) +
@@ -665,11 +682,11 @@ union_bars_gg <- function(.data, pal) {
       geom_col() +
       geom_hline(yintercept = 0, color = "#d8d8d8", linewidth = 1.45) +
       geom_bar_text(
-        formatter = number_format(accuracy = 1L, scale_cut = cut_short_scale()),
+        formatter = number_format(accuracy = .1, scale_cut = cut_short_scale()),
         fontface = "bold",
         outside = TRUE,
         contrast = TRUE,
-        size = 15,
+        size = 14,
         min.size = 10
       ) +
       scale_y_continuous(expand = expansion(mult = c(0,.1))) +
@@ -693,6 +710,7 @@ union_bars_gg <- function(.data, pal) {
       facet_wrap(vars(varlevel),
                  ncol = 1,
                  dir = "v",
+                 drop = FALSE,
                  axes = "all_x") 
     
     ##### HORIZONTAL LAYOUT
@@ -707,7 +725,7 @@ union_bars_gg <- function(.data, pal) {
         nrow = num_rows(),
         dir = "h",
         axes = "all_x",
-        drop = TRUE,
+        drop = FALSE,
         labeller = label_wrap_gen(width = 30)
       ) +
       theme(panel.spacing.x = unit(10, "pt"),
@@ -740,8 +758,10 @@ union_bars_patch <- function(df, pal) {
   
   if(input$gg_layout == "Vertical") {
     ggs[[1]] + ggs[[2]]
+    
   } else if (input$gg_layout == "Horizontal") {
     ggs[[1]] / ggs[[2]]
+    
   }
 }
 
@@ -761,6 +781,7 @@ kb_prep <- function(df) {
   
   if (input$tab_measure == "Density") {
     df <- df |>
+      filter(union_bin == "Union member") |> 
       select(survyear, cowmain_rc, varlevel, value = p_v) |> 
       pivot_wider(
         id_cols = c(survyear, cowmain_rc),
@@ -794,7 +815,13 @@ kb_prep <- function(df) {
 }
 
 # Create reactive data set
-kbl_df <- reactive({kb_prep(dataset_pop())})
+kbl_df <- reactive({
+  if (input$tab_measure == "Density") {
+    kb_prep(dataset())
+  } else if (input$tab_measure %in% c("Proportion", "Count")) {
+    kb_prep(dataset_pop())
+  }
+})
 
 # Table function
 union_kbl <- function(df) {
@@ -816,8 +843,7 @@ df |>
   kable_styling(
     bootstrap_options = c("striped", "hover", "responsive"),
     font_size = 16,
-    repeat_header_continued = TRUE,
-    fixed_thead = TRUE) |> 
+    fixed_thead = T) |> 
   pack_rows("Private sector",
             kb_rows[kb_rows$cowmain_rc=="Private sector",]$rowfirst,
             kb_rows[kb_rows$cowmain_rc=="Private sector",]$rowlast,
@@ -825,7 +851,8 @@ df |>
   pack_rows("Public sector",
             kb_rows[kb_rows$cowmain_rc=="Public sector",]$rowfirst,
             kb_rows[kb_rows$cowmain_rc=="Public sector",]$rowlast,
-            label_row_css = "border-bottom: 1px solid;background-color:#8f1f3f;color:#fff") 
+            label_row_css = "border-bottom: 1px solid;background-color:#8f1f3f;color:#fff") |> 
+  scroll_box(width = "100%", height = "700px", fixed_thead = T)
 
 }
 
